--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <main class="flex-grow flex flex-col h-full min-w-0">
         <nav class="flex-shrink-0 border-b border-border-color flex items-center px-2">
-            <button id="sidebar-toggle-btn" class="p-3 hover:bg-bg-element transition-colors border-r border-border-color">
+            <button id="sidebar-toggle-btn" class="p-3 -ml-2 hover:bg-bg-element transition-colors border-r border-border-color">
                 <i id="sidebar-toggle-icon" data-lucide="panel-left-close" class="w-5 h-5"></i>
             </button>
             
