--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                 <div id="chat-messages" class="flex-grow p-4 overflow-y-auto ${state.isChatWidthCompact ? 'chat-view-compact' : ''}"></div>
                 <form id="chat-form" class="flex-shrink-0 p-4">
                     <div class="relative w-full max-w-4xl mx-auto">
-                        <textarea id="chat-input" class="w-full bg-input border border-border-color rounded-lg p-3 pr-12 resize-none focus:outline-none focus:ring-2 focus:ring-accent" placeholder="Введите ваше сообщение..." rows="1"></textarea>
+                        <textarea id="chat-input" class="w-full bg-input border border-border-color rounded-lg p-3 pr-12 resize-none focus:outline-none focus:ring-2 focus:ring-accent max-h-72 overflow-y-auto" placeholder="Введите ваше сообщение..." rows="1"></textarea>
                         <button type="submit" class="absolute right-3 bottom-3 p-2 rounded-full bg-accent hover:bg-accent-hover transition-colors disabled:bg-gray-500">
                             <i data-lucide="send" class="w-5 h-5 text-white"></i>
                         </button>
