--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                 <div id="chat-messages" class="flex-grow p-4 overflow-y-auto ${state.isChatWidthCompact ? 'chat-view-compact' : ''}"></div>
                 <form id="chat-form" class="flex-shrink-0 p-4">
                     <div class="relative w-full max-w-4xl mx-auto">
-                        <textarea id="chat-input" class="w-full bg-input border border-border-color rounded-lg p-3 pr-12 resize-none focus:outline-none focus:ring-2 focus:ring-accent max-h-72 overflow-y-auto" placeholder="Введите ваше сообщение..." rows="1"></textarea>
+                        <textarea id="chat-input" class="w-full bg-input border border-border-color rounded-lg p-3 pr-12 resize-none focus:outline-none focus:ring-2 focus:ring-accent" placeholder="Введите ваше сообщение..." rows="1"></textarea>
                         <button type="submit" class="absolute right-3 bottom-3 p-2 rounded-full bg-accent hover:bg-accent-hover transition-colors disabled:bg-gray-500">
                             <i data-lucide="send" class="w-5 h-5 text-white"></i>
                         </button>
@@ -882,7 +882,41 @@
                     form.requestSubmit();
                 }
             });
-            input?.addEventListener('input', () => { input.style.height = 'auto'; input.style.height = (input.scrollHeight) + 'px'; }); 
+
+            const chatHeader = titleInput?.closest('.flex-shrink-0.p-3.border-b');
+            const chatViewContainer = document.getElementById('chat-view-container');
+
+            if (input && form && chatHeader && chatViewContainer) {
+                const handleInputResize = () => {
+
+                    const containerHeight = chatViewContainer.offsetHeight;
+                    const headerHeight = chatHeader.offsetHeight;
+                    const formStyle = window.getComputedStyle(form);
+                    const formVerticalPadding = parseFloat(formStyle.paddingTop) + parseFloat(formStyle.paddingBottom);
+                    
+                    const MIN_MESSAGES_HEIGHT = 150; 
+                    
+                    const maxTextareaHeight = containerHeight - headerHeight - formVerticalPadding - MIN_MESSAGES_HEIGHT;
+
+                    input.style.height = 'auto';
+
+                    const newHeight = Math.min(input.scrollHeight, maxTextareaHeight);
+
+                    input.style.height = newHeight + 'px';
+                };
+
+                input.addEventListener('input', handleInputResize);
+
+                setTimeout(handleInputResize, 10);
+
+            } else {
+
+                input?.addEventListener('input', () => { 
+                    input.style.height = 'auto'; 
+                    input.style.height = (input.scrollHeight) + 'px'; 
+                });
+            }
+
             titleInput?.addEventListener('change', (e) => { const sessionRef = doc(db, `artifacts/${appId}/users/${userId}/sessions`, state.activeSessionId); updateDoc(sessionRef, { title: e.target.value }); }); 
 
             roleSelect?.addEventListener('change', (e) => {
