--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 </div>
                 <div class="flex-grow relative min-h-0">
                     <div id="chat-messages" class="absolute inset-0 p-4 overflow-y-auto ${state.isChatWidthCompact ? 'chat-view-compact' : ''}"></div>
-                    <form id="chat-form" class="absolute bottom-0 left-0 right-0 p-4 bg-bg-main/80 backdrop-blur-sm border-t border-border-color/50">
+                    <form id="chat-form" class="absolute bottom-0 left-0 right-0 p-4">
                         <div class="relative w-full max-w-4xl mx-auto">
                             <textarea id="chat-input" class="w-full bg-input border border-border-color rounded-lg p-3 pr-12 resize-none focus:outline-none focus:ring-2 focus:ring-accent" placeholder="Введите ваше сообщение..." rows="1"></textarea>
                             <button type="submit" class="absolute right-3 bottom-3 p-2 rounded-full bg-accent hover:bg-accent-hover transition-colors disabled:bg-gray-500">
