--- a/index.html
+++ b/index.html
@@ -529,10 +529,10 @@
                 </div>
                 <div class="flex-grow relative min-h-0">
                     <div id="chat-messages" class="absolute inset-0 p-4 overflow-y-auto ${state.isChatWidthCompact ? 'chat-view-compact' : ''}"></div>
-                    <form id="chat-form" class="absolute bottom-0 left-0 right-0 p-4 pt-2 bg-gradient-to-t from-bg-main to-transparent">
+                    <form id="chat-form" class="absolute bottom-0 left-0 right-0 p-4">
                         <div class="relative w-full max-w-4xl mx-auto">
-                            <textarea id="chat-input" class="w-full bg-bg-sidebar border-2 border-transparent focus:border-accent/50 rounded-xl p-4 pr-16 text-base resize-none focus:outline-none focus:ring-0 transition-colors duration-200 shadow-md" placeholder="Введите ваше сообщение..." rows="1"></textarea>
-                            <button type="submit" class="absolute right-4 bottom-4 w-10 h-10 flex items-center justify-center bg-accent hover:bg-accent-hover rounded-lg transition-all duration-200 disabled:bg-gray-600 disabled:opacity-50 disabled:scale-95">
+                            <textarea id="chat-input" class="w-full bg-input border border-border-color rounded-lg p-3 pr-12 resize-none focus:outline-none focus:ring-2 focus:ring-accent/80 focus:shadow-lg focus:shadow-accent/10 transition-all duration-300" placeholder="Введите ваше сообщение..." rows="1"></textarea>
+                            <button type="submit" class="absolute right-3 bottom-3 p-2 rounded-full bg-accent hover:bg-accent-hover transition-transform hover:scale-110 active:scale-100 disabled:bg-gray-500">
                                 <i data-lucide="send" class="w-5 h-5 text-white"></i>
                             </button>
                         </div>
