--- a/index.html
+++ b/index.html
@@ -1659,8 +1659,8 @@
                     editForm.innerHTML = `
                         <textarea class="w-full bg-input border border-border-color rounded-lg p-3 resize-none focus:outline-none focus:ring-2 focus:ring-accent" rows="3"></textarea>
                         <div class="flex justify-start items-center mt-2 space-x-2">
-                             <button class="cancel-edit-btn">Отмена</button>
-                             <button class="save-edit-btn">Завершить</button>
+                             <button type="button" class="cancel-edit-btn px-4 py-2 rounded-md bg-bg-input hover:bg-gray-600 transition-colors">Отмена</button>
+                             <button type="button" class="save-edit-btn px-4 py-2 rounded-md bg-accent hover:bg-accent-hover text-white transition-colors">Завершить</button>
                         </div>
                     `;
                     
