--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
-<body class="h-dvh w-full flex">
+<body class="h-screen w-full flex">
 
     <div id="sidebar-backdrop" class="fixed inset-0 bg-black/60 backdrop-blur-sm z-30 lg:hidden"></div>
     <aside id="sidebar" class="bg-bg-sidebar flex flex-col h-full border-r border-border-color">
@@ -929,29 +929,40 @@
                 }
             });
 
-            // --- ИЗМЕНЕННАЯ И УПРОЩЕННАЯ ЛОГИКА ---
+
             if (input && form && messagesContainer && chatViewContainer) {
                 const adjustLayout = () => {
-                    if (!form || !messagesContainer || !input) return;
+                    if (!form || !messagesContainer || !input || !chatViewContainer) return;
 
-                    // 1. Автоматически изменяем высоту поля ввода
-                    input.style.height = 'auto';
-                    input.style.height = `${input.scrollHeight}px`;
+                    // --- ВОЗВРАЩАЕМ ЛОГИКУ ОГРАНИЧЕНИЯ ВЫСОТЫ ---
+                    const MIN_MESSAGES_HEIGHT = 40; // Минимальная видимая область для сообщений
+                    const maxFormHeight = chatViewContainer.offsetHeight - MIN_MESSAGES_HEIGHT;
+                    const formStyle = window.getComputedStyle(form);
+                    const formVerticalPadding = parseFloat(formStyle.paddingTop) + parseFloat(formStyle.paddingBottom);
+                    const maxTextareaHeight = maxFormHeight - formVerticalPadding;
+
+                    input.style.height = 'auto'; // Сначала сбрасываем высоту для корректного замера scrollHeight
                     
-                    // 2. Устанавливаем нижний отступ для контейнера с сообщениями,
-                    //    чтобы они не перекрывались формой.
+                    if (input.scrollHeight <= maxTextareaHeight) {
+                        // Если поле ввода помещается, устанавливаем высоту по контенту
+                        input.style.height = `${input.scrollHeight}px`;
+                        input.style.overflowY = 'hidden'; 
+                    } else {
+                        // Если нет, ограничиваем максимальной высотой и включаем прокрутку
+                        input.style.height = `${maxTextareaHeight}px`;
+                        input.style.overflowY = 'auto';
+                    }
+
+                    // Обновляем отступ для сообщений, чтобы они не прятались за формой
                     requestAnimationFrame(() => {
                         const formHeight = form.offsetHeight;
                         messagesContainer.style.paddingBottom = `${formHeight}px`;
                     });
                 };
-                
-                // Вызываем adjustLayout при вводе и при изменении размера окна
+
                 input.addEventListener('input', adjustLayout);
                 const resizeObserver = new ResizeObserver(adjustLayout);
                 resizeObserver.observe(chatViewContainer);
-
-                // Устанавливаем начальное состояние
                 setTimeout(adjustLayout, 50);
             }
 
