--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <!-- Стили вынесены в отдельный файл -->
     <link rel="stylesheet" href="styles.css">
-
+    <style> html { height: 100%; } body { height: 100%; overflow: hidden; } </style>
 </head>
 <body class="h-dvh w-full flex">
 
