--- a/index.html
+++ b/index.html
@@ -815,14 +815,7 @@
                         <i data-lucide="chevron-down" class="w-5 h-5 transition-transform details-arrow"></i>
                     </summary>
                     <div class="p-4 border-t border-border-color">
-                        <div class="flex justify-end mb-6">
-                            <button id="add-new-provider-btn" class="flex items-center px-4 py-2 bg-accent hover:bg-accent-hover rounded-md transition-colors flex-shrink-0">
-                                <i data-lucide="plus" class="w-5 h-5 mr-2"></i>
-                                Добавить провайдера
-                            </button>
-                        </div>
-                        <div id="providers-list" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
-                        </div>
+                        <!-- ...содержимое аккордеона... -->
                     </div>
                 </details>
         
@@ -833,14 +826,7 @@
                         <i data-lucide="chevron-down" class="w-5 h-5 transition-transform details-arrow"></i>
                     </summary>
                     <div class="p-4 border-t border-border-color">
-                        <div class="flex justify-end mb-6">
-                            <button id="add-new-role-btn" class="flex items-center px-4 py-2 bg-accent hover:bg-accent-hover rounded-md transition-colors flex-shrink-0">
-                                <i data-lucide="plus" class="w-5 h-5 mr-2"></i>
-                                Добавить роль
-                            </button>
-                        </div>
-                        <div id="roles-list" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4">
-                        </div>
+                         <!-- ...содержимое аккордеона... -->
                     </div>
                 </details>
             </div>`;
