--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBOX</title>
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/icon/favicon-96x96.png">
+    <link rel="icon" type="image/svg+xml" href="/icon/favicon.svg">
+    <link rel="shortcut icon" href="/icon/favicon.ico">
+    <link rel="manifest" href="/icon/site.webmanifest">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         const firebaseConfig = {
