--- a/index.html
+++ b/index.html
@@ -751,12 +751,15 @@
                 actionsContainer.appendChild(regenerateButton);
             }
 
+            const leftActionsContainer = document.createElement('div');
+            leftActionsContainer.className = 'absolute bottom-1 left-2 flex items-center bg-bg-element p-1 rounded-md opacity-0 group-hover:opacity-100 transition-opacity z-10';
+
             const fullscreenButton = document.createElement('button');
             fullscreenButton.className = 'p-1 text-text-secondary hover:text-accent transition-colors';
             fullscreenButton.title = 'Открыть в полном окне';
             fullscreenButton.innerHTML = `<i data-lucide="maximize" class="w-4 h-4"></i>`;
             fullscreenButton.addEventListener('click', () => { showFullscreenMessage(msg.content); });
-            actionsContainer.appendChild(fullscreenButton);
+            leftActionsContainer.appendChild(fullscreenButton);
             
             const copyToNotesBtn = document.createElement('button');
             copyToNotesBtn.className = 'p-1 text-text-secondary hover:text-accent transition-colors';
@@ -833,6 +836,7 @@
             messageWrapper.appendChild(headerDiv);
             messageWrapper.appendChild(contentDiv);
             messageWrapper.appendChild(actionsContainer);
+            messageWrapper.appendChild(leftActionsContainer);
 
             messageWrapper.querySelectorAll('pre code').forEach((block) => {
                 const preElement = block.parentElement;
