--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                         <div class="relative w-full max-w-4xl mx-auto">
                              <!-- Контейнер для предпросмотра файла, вставлен сюда -->
                             <div id="attachment-preview-container" class="pb-2"></div>
-                            <textarea id="chat-input" class="w-full bg-input border border-border-color rounded-xl p-3 pr-12 resize-none focus:outline-none focus:ring-2 focus:ring-accent min-h-[50px]" placeholder="Введите сообщение или перетащите файл..." rows="1"></textarea>
+                            <textarea id="chat-input" class="w-full bg-input border border-border-color rounded-xl p-3 pr-12 resize-none focus:outline-none focus:ring-2 focus:ring-accent min-h-[50px]" placeholder="Введите сообщение" rows="1"></textarea>
                             <button type="submit" class="absolute right-3 bottom-3 p-2 rounded-full bg-accent hover:bg-accent-hover transition-colors disabled:bg-gray-500">
                                 <i data-lucide="send" class="w-5 h-5 text-white"></i>
                             </button>
