--- a/index.html
+++ b/index.html
@@ -749,7 +749,8 @@
             }
             
             const contentDiv = document.createElement('div');
-            contentDiv.className = 'flex-grow prose max-w-none mt-2 w-full'; 
+            //contentDiv.className = 'flex-grow prose max-w-none mt-2 w-full'; 
+            contentDiv.className = 'flex-grow prose max-w-none mt-2 w-full flow-root';
             let processedContent = (msg.content || '').replace(
                 /<think>([\s\S]*?)<\/think>/g,
                 `<details><summary>Показать ход мыслей</summary><div>$1</div></details>`
