--- a/index.html
+++ b/index.html
@@ -871,6 +871,7 @@
             leftActionsContainer.appendChild(fullscreenButton);
             
             const innerContentWrapper = document.createElement('div');
+            innerContentWrapper.className = 'w-full';
             innerContentWrapper.appendChild(headerDiv);
             messageWrapper.appendChild(innerContentWrapper);
             messageWrapper.appendChild(actionsOuterContainer);
